# ModPilot

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
devvit-app/: .eslintrc.cjs  .gitignore  README.md  devvit.json  devvit.yaml  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
devvit-app/.github/: dependabot.yml
devvit-app/src/: index.ts  main.ts
devvit-app/src/client/: index.html  main.js  style.css
devvit-app/src/engine/: loop.ts  (+14 more)
docs/: 01-Product.md  02-Architecture.md  03-Devvit.md  04-InvestigationEngine.md  05-Memory.md  06-AILayer.md  07-DataLayer.md  08-API.md  09-UX.md  10-ReliabilityAndSafety.md  11-Evaluation.md  12-Analytics.md  13-Infra.md  14-Engineering.md  15-Hackathon.md  Demo Guide.md  Glossary.md  Implementation Tracker.md  Overview.md  PRIVACY.md  Project Status.md  Specs.md  TERMS.md
docs/adr/: 0001-devvit-plus-external-backend.md  0002-no-online-rl.md  0003-evidence-citation-required.md  0004-human-in-the-loop-mandatory.md  0005-devvit-web-not-blocks.md  0007-engine-inside-devvit-after-hf-rejection.md
engine/: .dockerignore  .env.example  .gitignore  Dockerfile  HF_DEPLOY.md  README.md  alembic.ini  pyproject.toml  ruff.toml
engine/alembic/: env.py
engine/alembic/versions/: 20260513_1829_baseline_schema_subreddit_profile_user_.py  20260514_0000_add_thread_memory_table.py
engine/api/: canned.py  config.py  errors.py  main.py  middleware.py  pipeline.py  schemas.py  test_investigate.py  test_main.py  test_pipeline.py
engine/llm/: client.py  gemini.py  test_gemini.py  test_validation.py  validation.py
engine/llm/prompts/: reasoner.py  summarizer.py  test_reasoner.py
engine/memory/: ingest.py  test_ingest.py
engine/observability/: logging.py
engine/orchestrator/: calibrator.py  loop.py  policy_match.py  prior_actions.py  report_velocity.py  strategy.py  test_calibrator.py  test_loop.py  test_policy_match.py  test_prior_actions.py  test_report_velocity.py  test_strategy.py  test_thread_context.py  test_tools.py  test_user_history.py  thread_context.py  tools.py  user_history.py
engine/personalities/: presets.py  test_presets.py
engine/store/: connections.py  models.py  postgres.py  redis.py  test_models.py  test_postgres.py  test_redis.py  types.py
eval/: README.md  pyproject.toml
mockups/: moderator-ui.html
scripts/: check-banned-terms.sh  check-no-inline-hex.sh
(+31 files in other folders)
