[project]
name = "modpilot-eval"
version = "0.0.1"
description = "Evaluation harness for ModPilot — scenario library + runner"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Layer rule (invariant I-8): eval/ MAY import from engine/.
    "modpilot-engine",
    "pydantic>=2.9",
    "rich>=13.9",
]

[tool.uv.sources]
modpilot-engine = { path = "../engine", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scenarios", "runner"]
